--- a/index.html
+++ b/index.html
@@ -1,11 +1,399 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Notts Plumbing Services</title>
-</head>
-<body>
-  <scripts src="app.js"></script>
-</body>
+<html>
+  <head>
+    <!--Import Google Icon Font-->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <!--Import materialize.css-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <link rel="stylesheet" href="css/main.css" />
+    <script
+      src="https://kit.fontawesome.com/92c8bb1951.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Notts Plumbing Services LTD</title>
+  </head>
+
+  <body id="home" class="scrollspy">
+    <div class="navbar-fixed">
+      <nav class="orange">
+        <div class="container">
+          <div class="nav wrapper">
+            <a href="" class="brand-logo">Notts Plumbing Services LTD</a>
+            <a href="" data-target="mobile-nav" class="sidenav-trigger">
+              <i class="material-icons">menue</i>
+            </a>
+            <ul class="right hide-on-med-and-down">
+              <li>
+                <a href="#home">Home</a>
+              </li>
+
+              <li>
+                <a href="#services">Services</a>
+              </li>
+              <li>
+                <a href="#gallery">Gallery</a>
+              </li>
+              <li>
+                <a href="#contact">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
+    <ul class="sidenav" id="mobile-nav">
+      <li>
+        <a href="#home">Home</a>
+      </li>
+
+      <li>
+        <a href="#services">Services</a>
+      </li>
+      <li>
+        <a href="#gallery">Gallery</a>
+      </li>
+      <li>
+        <a href="#contact">Contact</a>
+      </li>
+    </ul>
+    <!-- slider -->
+    <section class="slider">
+      <ul class="slides">
+        <li>
+          <img src="images/img10.jpg" />
+
+          <div class="caption center-align" >
+            <h2 class="black-text">Take Your Dream Holiday!</h2>
+            <h5 class="light black-text hide-on-small-only">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+              iure quo ab accusantium sapiente veritatis itaque ipsam facilis?
+              Nemo, asperiores!
+            </h5>
+          </div>
+        </li>
+        <li>
+          <img src="images/img5.jpg" />
+
+          <div class="caption left-align">
+            <h2 class='black-text'>We Work With People Travelling From Everywhere</h2>
+            <h5 class="light black-text hide-on-small-only">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+              reprehenderit rerum obcaecati cupiditate, ipsa accusamus corrupti
+              numquam velit. Aliquid, eum?
+            </h5>
+          </div>
+        </li>
+        <li>
+          <img src="images/img5.jpg" />
+
+          <div class="caption right-align">
+            <h2>Group and Individual bookings</h2>
+            <h5 class="light grey-text text-lighten-3 hide-on-small-only">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
+              dolor ratione ab quisquam illo voluptatum necessitatibus dolores
+              vero quos odit.
+            </h5>
+          </div>
+        </li>
+      </ul>
+    </section>
+
+    <!--iconboxes-->
+    <section class="section section-icons grey lighten-4 center">
+      <div class="container">
+        <div class="row">
+          <div class="col s12 m4">
+            <div class="card-panel">
+              <i class="material-icons large orange-text">house</i>
+              <h4>Homeowners</h4>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit,
+                corrupti!
+              </p>
+            </div>
+          </div>
+          <div class="col s12 m4">
+            <div class="card-panel">
+              <i class="material-icons large orange-text">apartment</i>
+              <h4>Landlords</h4>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit,
+                corrupti!
+              </p>
+            </div>
+          </div>
+          <div class="col s12 m4">
+            <div class="card-panel">
+              <i class="material-icons large orange-text">business</i>
+              <h4>Commercial</h4>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit,
+                corrupti!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="services" class="section section-popular scrollspy">
+      <div class="container">
+        <div class="row">
+          <h4 class="center"><span class="orange-text">Our</span> Services</h4>
+          <div class="col s14 m4">
+            <div class="card">
+              <div class="card-image">
+                <img src="img/resort1.jpg" alt="" />
+                <span class="card-title"> Greece, Santorini</span>
+              </div>
+              <div class="card-content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi,
+                deserunt reprehenderit. Itaque laboriosam architecto similique.
+              </div>
+            </div>
+          </div>
+          <div class="col s14 m4">
+            <div class="card">
+              <div class="card-image">
+                <img src="img/resort2.jpg" alt="" />
+                <span class="card-title"> The Bahamas</span>
+              </div>
+              <div class="card-content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi,
+                deserunt reprehenderit. Itaque laboriosam architecto similique.
+              </div>
+            </div>
+          </div>
+          <div class="col s14 m4">
+            <div class="card">
+              <div class="card-image">
+                <img src="img/resort3.jpg" alt="" />
+                <span class="card-title"> Nova Scotia</span>
+              </div>
+              <div class="card-content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi,
+                deserunt reprehenderit. Itaque laboriosam architecto similique.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- follow-->
+
+    <section class="section section-follow orange darken-2 white-text center">
+      <div class="container">
+        <div class="row">
+          <div class="col s12">
+            <h4>Follow Us</h4>
+            <p>Follow us on Social Media For Special Offers</p>
+            <a href="#" class="white-text">
+              <i class="fab fa-facebook fa-4x"></i>
+          
+            <a href="#" class="white-text">
+              <i class="fab fa-instagram fa-4x"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Gallery-->
+
+    <section id="gallery" class="section section-gallery scrollspy">
+      <div class="container">
+        <h4 class="center"><span class="orange-text">Photo</span> Gallery</h4>
+        <div class="row">
+          <div class="col s12 m3">
+            <img
+              src="https://source.unsplash.com/1600x900/?beach"
+              alt=""
+              class="materialboxed responsive-img"
+            />
+          </div>
+          <div class="col s12 m3">
+            <img
+              src="https://source.unsplash.com/1600x900/?travel"
+              alt=""
+              class="materialboxed responsive-img"
+            />
+          </div>
+          <div class="col s12 m3">
+            <img
+              src="https://source.unsplash.com/1600x900/?nature"
+              alt=""
+              class="materialboxed responsive-img"
+            />
+          </div>
+          <div class="col s12 m3">
+            <img
+              src="https://source.unsplash.com/1600x900/?water,travel"
+              alt=""
+              class="materialboxed responsive-img"
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col s12 m3">
+            <img
+              src="https://source.unsplash.com/1600x900/?water"
+              alt=""
+              class="materialboxed responsive-img"
+            />
+          </div>
+          <div class="col s12 m3">
+            <img
+              src="https://source.unsplash.com/1600x900/?building"
+              alt=""
+              class="materialboxed responsive-img"
+            />
+          </div>
+          <div class="col s12 m3">
+            <img
+              src="https://source.unsplash.com/1600x900/?trees"
+              alt=""
+              class="materialboxed responsive-img"
+            />
+          </div>
+          <div class="col s12 m3">
+            <img
+              src="https://source.unsplash.com/1600x900/?ship"
+              alt=""
+              class="materialboxed responsive-img"
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col s12 m3">
+            <img
+              src="https://source.unsplash.com/1600x900/?beaches"
+              alt=""
+              class="materialboxed responsive-img"
+            />
+          </div>
+          <div class="col s12 m3">
+            <img
+              src="https://source.unsplash.com/1600x900/?traveling"
+              alt=""
+              class="materialboxed responsive-img"
+            />
+          </div>
+          <div class="col s12 m3">
+            <img
+              src="https://source.unsplash.com/1600x900/?bridge"
+              alt=""
+              class="materialboxed responsive-img"
+            />
+          </div>
+          <div class="col s12 m3">
+            <img
+              src="https://source.unsplash.com/1600x900/?boat,travel"
+              alt=""
+              class="materialboxed responsive-img"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--contact-->
+    <section id="contact" class="section section-contact scrollspy">
+      <div class="container">
+        <div class="row">
+          <div class="col s12 m6">
+            <div class="card-panel orange white-text center">
+              <i class="material-icons">email</i>
+              <h5>Contact us for bookings</h5>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius
+                odit vel, placeat repellat neque sit sed repellendus tenetur
+                minima. Illum?
+              </p>
+            </div>
+            
+            <div class="center">
+              <i class="material-icons medium orange-text">email</i>
+              <br>
+              <span>nottsplumbingservices@gmail.com</span>
+              <br>
+              <i class="material-icons medium orange-text">phone</i>
+              <br>
+              <span>07986996286</span>
+            </div>
+          </div>
+          <div class="col s12 m6">
+            <div class="card-panel grey lighten-3">
+              <h5>Please fill out this form</h5>
+              <div class="input-field">
+                <input type="text" placeholder="Name" />
+              </div>
+              <div class="input-field">
+                <input type="text" placeholder="Email" />
+              </div>
+              <div class="input-field">
+                <input type="text" placeholder="Phone" />
+              </div>
+              <div class="input-field">
+                <textarea
+                  class="materialize-textarea"
+                  placeholder="Enter Message"
+                ></textarea>
+              </div>
+              <input type="submit" value="Submit" class="btn orange" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Footer-->
+    <footer class="section orange daken-2 white-text center">
+      <p class="flow-text">Notts Plumbing Services LTD&copy; 2020</p>
+    </footer>
+    <!--JavaScript at end of body for optimized loading-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script>
+      // sidenav
+      const sideNav = document.querySelector(".sidenav");
+      M.Sidenav.init(sideNav, {});
+
+      //slider
+      const slider = document.querySelector(".slider");
+      M.Slider.init(slider, {
+        indicators: false,
+        height: 500,
+        transition: 500,
+        interval: 6000,
+      });
+
+      //Autocomplete
+      const ac = document.querySelector(".autocomplete");
+      M.Autocomplete.init(ac, {
+        data: {
+          Greece: null,
+          Istanbul: null,
+          Spain: null,
+          Italy: null,
+          France: null,
+          Germany: null,
+          Poland: null,
+          Serbia: null,
+        },
+      });
+
+      // Material Boxed
+      const mb = document.querySelectorAll(".materialboxed");
+      M.Materialbox.init(mb, {});
+
+      //scrollspy
+      const ss = document.querySelectorAll(".scrollspy");
+      M.ScrollSpy.init(ss, {});
+    </script>
+  </body>
 </html>
