auto call on mobile number

--- a/index.html
+++ b/index.html
@@ -319,13 +319,14 @@
             </div>
             
             <div class="center">
-              <i class="material-icons medium orange-text">email</i>
+              <a href="mailto:nottsplumbingservices@gmail.com">
+              <i class="material-icons medium orange-text">email</i></a>
               <br>
-              <span>nottsplumbingservices@gmail.com</span>
+              <a href="mailto:nottsplumbingservices@gmail.com">nottsplumbingservices@gmail.com</a>
               <br>
-              <i class="material-icons medium orange-text">phone</i>
+              <a href="tel:+447986996286"><i class="material-icons medium orange-text">phone</i></a> 
               <br>
-              <span>07986996286</span>
+               <a href="tel:+447986996286">+447986996286</a> 
             </div>
           </div>
           <div class="col s12 m6">
