--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       src="https://kit.fontawesome.com/92c8bb1951.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="style.css">
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -27,7 +28,7 @@
       <nav class="orange">
         <div class="container">
           <div class="nav wrapper">
-            <a href="" class="brand-logo">Notts Plumbing Services LTD</a>
+            <a href="" class="brand-logo"> Notts Plumbing Services LTD</a>
             <a href="" data-target="mobile-nav" class="sidenav-trigger">
               <i class="material-icons">menue</i>
             </a>
@@ -116,8 +117,7 @@
               <i class="material-icons large orange-text">house</i>
               <h4>Homeowners</h4>
               <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit,
-                corrupti!
+                We are very experienced with dealing with private properties and are available 24/7!
               </p>
             </div>
           </div>
@@ -126,8 +126,7 @@
               <i class="material-icons large orange-text">apartment</i>
               <h4>Landlords</h4>
               <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit,
-                corrupti!
+                We have experience servicing many landlord properties, please contact us for our rates and services.
               </p>
             </div>
           </div>
@@ -136,8 +135,7 @@
               <i class="material-icons large orange-text">business</i>
               <h4>Commercial</h4>
               <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit,
-                corrupti!
+                We have a large number of commercial clients so we are ready to work to any specification required.
               </p>
             </div>
           </div>
@@ -151,10 +149,6 @@
           <h4 class="center"><span class="orange-text">Our</span> Services</h4>
           <div class="col s14 m4">
             <div class="card">
-              <div class="card-image">
-                <img src="img/resort1.jpg" alt="" />
-                <span class="card-title"> Greece, Santorini</span>
-              </div>
               <div class="card-content">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi,
                 deserunt reprehenderit. Itaque laboriosam architecto similique.
@@ -163,10 +157,6 @@
           </div>
           <div class="col s14 m4">
             <div class="card">
-              <div class="card-image">
-                <img src="img/resort2.jpg" alt="" />
-                <span class="card-title"> The Bahamas</span>
-              </div>
               <div class="card-content">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi,
                 deserunt reprehenderit. Itaque laboriosam architecto similique.
@@ -175,10 +165,6 @@
           </div>
           <div class="col s14 m4">
             <div class="card">
-              <div class="card-image">
-                <img src="img/resort3.jpg" alt="" />
-                <span class="card-title"> Nova Scotia</span>
-              </div>
               <div class="card-content">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi,
                 deserunt reprehenderit. Itaque laboriosam architecto similique.
@@ -196,10 +182,10 @@
           <div class="col s12">
             <h4>Follow Us</h4>
             <p>Follow us on Social Media For Special Offers</p>
-            <a href="#" class="white-text">
+            <a href="https://m.facebook.com/nottsplumbingservices/" class="white-text">
               <i class="fab fa-facebook fa-4x"></i>
           
-            <a href="#" class="white-text">
+            <a href="https://www.instagram.com/nottsplumbingservices/" class="white-text">
               <i class="fab fa-instagram fa-4x"></i>
             </a>
           </div>
@@ -310,11 +296,9 @@
           <div class="col s12 m6">
             <div class="card-panel orange white-text center">
               <i class="material-icons">email</i>
-              <h5>Contact us for bookings</h5>
+              <h5>Contact us Today!</h5>
               <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius
-                odit vel, placeat repellat neque sit sed repellendus tenetur
-                minima. Illum?
+                Send us a message and we will respond as soon as soon as possible, alternatively you can call us, email or even a dm. Thanks 
               </p>
             </div>
             
