fixed mobile nav issue

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
         <a href="tel:+447986996286"><i class="material-icons small orange-text">phone</i></a> 
       </li>
       <li><a href="https://m.facebook.com/nottsplumbingservices/"><i class="material-icons small orange-text">facebook</i>
-      </li>
-      <li><a href="https://m.facebook.com/nottsplumbingservices/"><i class="material-icons small orange-text">insagram</i>
-      </li>
+      </a></li>
+      <li><a href="https://www.instagram.com/nottsplumbingservices/" class="white-text">
+        <i class="fab fa-instagram fa-2x" style="color: orange;"></i></a></li>
       
     </ul>
     <!-- slider -->
