--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <img src="images/img5.jpg" />
 
           <div class="caption black-text left-align">
-            <h2>"Excellent service, lots of experience and reliable with reasonable rates"</h2>
+            <h2>"Excellent service, lots of experience with reasonable rates"</h2>
             <h5 class="light black-text text-lighten-3 hide-on-small-only">
               James Boardman <br>
               Edwalton
