--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       src="https://kit.fontawesome.com/92c8bb1951.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/main.css">
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
