--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
     <section class="slider">
       <ul class="slides">
         <li>
-          <img src="images/img10.jpg" />
+          <img src="images/slide1.jpg" />
 
           <div class="caption center-align" >
-            <h2 class="black-text">"Extremely polite and professional"</h2>
-            <h5 class="light black-text hide-on-small-only">
+            <h2 class="white-text">"Extremely polite and professional"</h2>
+            <h5 class="light white-text hide-on-small-only">
               Lisa Williams
               <br>
               Sneinton
@@ -100,7 +100,7 @@
           </div>
         </li>
         <li>
-          <img src="images/img5.jpg" />
+          <img src="images/slide2.jpg" />
 
           <div class="caption right-align">
             <h2 class='white-text'>'A hastle free and trustworthy service as always!"</h2>
@@ -112,11 +112,11 @@
           </div>
         </li>
         <li>
-          <img src="images/img5.jpg" />
+          <img src="images/slide3.jpg" />
 
-          <div class="caption black-text left-align">
+          <div class="caption white-text left-align">
             <h2>"Excellent service, lots of experience with reasonable rates"</h2>
-            <h5 class="light black-text text-lighten-3 hide-on-small-only">
+            <h5 class="light white-text text-lighten-3 hide-on-small-only">
               James Boardman <br>
               Edwalton
             </h5>
