fixed typing error

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <img src="images/slide2.jpg" />
 
           <div class="caption right-align">
-            <h2 class='white-text'>'A hastle free and trustworthy service as always!"</h2>
+            <h2 class='white-text'>"A hastle free and trustworthy service as always!"</h2>
             <h5 class="light white-text hide-on-small-only">
               George White<br>
               Ruddington
